--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,10 +2,11 @@
 # Railway uses Nixpacks as default builder
 
 [phases.setup]
-nixPkgs = ["python312", "nodejs_18", "pnpm"]
+nixPkgs = ["python312", "nodejs_18", "nodePackages.pnpm"]
 
 [phases.install]
 cmds = [
+  "npm install -g pnpm",
   "cd code && pip install -r requirements.txt",
   "cd polish-finance-platform/polish-finance-app && pnpm install"
 ]
