Switch from Nixpacks to Dockerfile for Railway deployment
- Created Dockerfile with Node 18 Alpine + Python 3
- Installs pnpm via npm (reliable method)
- Multi-stage build for optimization
- Updated railway.json and railway.toml to use DOCKERFILE builder
- Fixed nixpacks.toml (removed problematic nodePackages.pnpm)

This fixes the 'undefined variable pnpm' error by using Docker
instead of Nixpacks, which gives us full control over the build.

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,11 +2,11 @@
 # Railway uses Nixpacks as default builder
 
 [phases.setup]
-nixPkgs = ["python312", "nodejs_18", "nodePackages.pnpm"]
+nixPkgs = ["python312", "nodejs_18"]
 
 [phases.install]
 cmds = [
-  "npm install -g pnpm",
+  "npm install -g pnpm@8",
   "cd code && pip install -r requirements.txt",
   "cd polish-finance-platform/polish-finance-app && pnpm install"
 ]
