--- a/railway.toml
+++ b/railway.toml
@@ -1,13 +1,11 @@
+# Railway configuration
+# This file configures Railway deployment
+
 [build]
-builder = "NIXPACKS"
+builder = "DOCKERFILE"
+dockerfilePath = "Dockerfile"
 
 [deploy]
-startCommand = "cd polish-finance-platform/polish-finance-app && pnpm run start"
+startCommand = "cd polish-finance-platform/polish-finance-app && npm install -g pnpm@8 && pnpm run start"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
-
-# Environment variables (set in Railway dashboard)
-# VITE_API_URL=https://your-backend.railway.app
-# VITE_ANALYSIS_API_URL=https://your-analysis.railway.app
-# VITE_REFRESH_INTERVAL=30000
-
