Update Dockerfile and gitignore - final Railway config

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,13 @@ memories/
 *.zip
 *.tar.gz
 *.gz
+.clinerules/byterover-rules.md
+.kilocode/rules/byterover-rules.md
+.roo/rules/byterover-rules.md
+.windsurf/rules/byterover-rules.md
+.cursor/rules/byterover-rules.mdc
+.kiro/steering/byterover-rules.md
+.qoder/rules/byterover-rules.md
+.augment/rules/byterover-rules.md
+# Snyk Security Extension - AI Rules (auto-generated)
+.cursor/rules/snyk_rules.mdc
