--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ ENV/
 # Node.js / Frontend
 node_modules/
 .pnpm-store/
-pnpm-lock.yaml
+# pnpm-lock.yaml - COMMITTED for Railway deployment (required for --frozen-lockfile)
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
