fix: Naprawiono 3 błędy bezpieczeństwa i konfiguracji
Bug 1: .cache_ggshield w repozytorium
- Dodano .cache_ggshield i *.cache_ggshield do .gitignore
- Usunięto .cache_ggshield z git (pliki cache nie powinny być w repo)

Bug 2: Dockerfile.backend hardcoduje port
- Zmieniono CMD na shell form aby używać zmiennej PORT
- Używa ${PORT:-8000} - Railway może teraz ustawić port przez env var
- Dodano ENV PORT=8000 jako domyślny

Bug 3: Dockerfile.analysis hardcoduje port
- Zmieniono CMD na shell form aby używać zmiennej PORT
- Używa ${PORT:-8001} - Railway może teraz ustawić port przez env var
- Dodano ENV PORT=8001 jako domyślny

Dodatkowo:
- Poprawiono set-all-railway-vars.sh aby lepiej znajdował URL-e serwisów
- Używa railway service przed railway domain dla lepszej kompatybilności

--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,7 @@ memories/
 .augment/rules/byterover-rules.md
 # Snyk Security Extension - AI Rules (auto-generated)
 .cursor/rules/snyk_rules.mdc
+
+# Security scanner cache files
+.cache_ggshield
+*.cache_ggshield
